# STM32F4-DISCOVERY

./: .gitignore  README.md
ExampleProject/: CMakeLists.txt  README.md
ExampleProject/tests/: CMakeLists.txt  TestLIS3DSH.cpp
ExampleProject/tests/Fake/: stm32f4xx_hal.c
ExampleProject/tests/Fake/drivers/Pin/: Pin.cpp
ExampleProject/tests/Fake/utility/Assert/: Assert.cpp
ExampleProject/tests/Mock/: Mock_SPI.hpp
FreeRTOSProject/: README.md
FreeRTOSProject/tests/: CMakeLists.txt
StandupCounter/: CMakeLists.txt  README.md
StandupCounter/tests/: CMakeLists.txt  TestDummyClass.cpp  TestHI-M1388AR.cpp  TestHIM1388AR.cpp  TestRunner.cpp
StandupCounter/tests/Fake/: stm32f4xx_hal.h
StandupCounter/tests/Mock/: Mock_PWM.hpp  Mock_SPI.hpp
TiltExample/: README.md
TiltExample/tests/: CMakeLists.txt
UnitTestExample/: README.md
UnitTestExample/tests/: TestCrc.cpp  TestLIS3DSH.cpp
board/: Board.cpp  Board.hpp  BoardConfig.hpp  README.md
components/: LIS3DSH.cpp  README.md
components/LIS3DSH/: LIS3DSH.cpp  LIS3DSH.hpp  README.md
drivers/: Pin.cpp  Pin.hpp  README.md
drivers/DMA/: DMA.cpp  DMA.hpp  README.md
drivers/I2C/: I2C.cpp  I2C.hpp  README.md
drivers/Interfaces/: IADC.hpp  IBasicTimer.hpp  ICRC.hpp  IRng.hpp  IWatchdog.hpp
drivers/PWM/: PWM.cpp  PWM.hpp  README.md
drivers/Pin/: Pin.cpp  Pin.hpp  README.md
drivers/SPI/: README.md  SPI.cpp  SPI.hpp
drivers/Usart/: README.md  Usart.cpp  Usart.hpp  Usart_drv.cpp  Usart_drv.hpp
drivers/board/: Board.cpp  BoardConfig.hpp  README.md
tests/: CMakeLists.txt
tests/Mock/: Mock_CRC.hpp  Mock_I2C.hpp  Mock_SPI.hpp  Mock_USART.hpp
utility/CpuWakeCounter/: CpuWakeCounter.cpp  CpuWakeCounter.hpp  README.md
utility/HeapCheck/: README.md  heap_check.c  heap_check.h
(+69 files in other folders)
